--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Clipboard Monitor",
+    "name": "Clipboard History",
     "version": "1.1",
-    "description": "Collects copied values from all tabs and applications, and stores clipboard history persistently.",
+    "description": "Stores copied values from all apps, and stores clipboard history persistently.",
     "permissions": [
         "clipboardRead",
         "clipboardWrite",
